<resources>
    <string name="app_name">FicheApp</string>
    <string name="back">Back</string>
    <string name="exam">Exam</string>
    <string name="new_edit_fiche_layout_title">Add/edit fiche</string>
    <string name="fiche_question_input_text_view">Question</string>
    <string name="fiche_answer_input_text_view">Answer</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="abandon">Abandon</string>
    <string name="result">Your result</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="categories">Categories</string>
    <string name="app_logo">Logo</string>
    <string name="start_learning">Start learning</string>
    <string name="add_edit_category">Add/Edit Category</string>
    <string name="add_name_category">Name of category</string>
    <string name="lessons">Lessons</string>
    <string name="add_edit_lessons">Add/Edit Lesson</string>
    <string name="add_name_lesson">Name of lesson</string>
    <string name="no_category">Please add category first</string>
    <string name="add_category">Add category</string>
</resources>
