<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.fiche.ficheapp.MenuActivity">

    <TextView
        android:id="@+id/textview_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70pt"
        android:layout_marginTop="20pt"
        android:text="@string/add_edit_category"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/categories_image_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginTop="20pt"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/categories_image_test2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15pt"
            android:layout_marginTop="20pt"
            android:layout_toRightOf="@id/categories_image_test"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/ic_launcher_round" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameofcategory1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7pt"
            android:text="@string/add_name_category"
            android:textSize="10sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7pt"
            android:layout_toRightOf="@id/nameofcategory1"
            android:text="@string/add_name_category"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button_back_to_all_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="110pt"
            android:text="@string/back"
            android:textSize="10pt" />

        <Button
            android:id="@+id/confirm_add_edit_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80pt"
            android:layout_marginTop="110pt"
            android:layout_toRightOf="@id/button_back_to_all_categories"
            android:text="@string/enter"
            android:textSize="10pt" />


    </RelativeLayout>

</LinearLayout>








