<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Title -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:id="@+id/current_lesson_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:paddingRight="20dp"
            android:text="@string/new_edit_fiche_layout_title"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <!-- Add question panel-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiche_question_input_text_view"
            android:textSize="20dp"
            android:textAlignment="center"
            android:id="@+id/question_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/question_title"/>
    </RelativeLayout>

    <!-- Add answer panel -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiche_answer_input_text_view"
            android:textSize="20dp"
            android:textAlignment="center"
            android:id="@+id/answer_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/answer_title"/>
    </RelativeLayout>

    <!-- Navigation panel -->
    <!-- Button will be changed in future/placeholder -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/new_edit_fiche_cancel"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_edit_fiche_enter"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/enter"/>
    </RelativeLayout>
</LinearLayout>
