<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.fiche.ficheapp.MenuActivity">


    <TextView
        android:id="@+id/textview_current_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100pt"
        android:layout_marginTop="20pt"
        android:text="@string/lessons"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/lessons_image_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5pt"
                android:layout_marginTop="10pt"
                android:contentDescription="@string/app_logo"
                android:src="@mipmap/ic_launcher_round" />


        </RelativeLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_lessons"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_to_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="100pt"
            android:layout_marginTop="120pt"
            android:text="@string/back"
            android:textSize="10pt" />


    </RelativeLayout>


</LinearLayout>